src/Home/style.css
.container {
  margin: auto;
  height: 100vh;
  max-width: 1200px;
  min-width: 650px;
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(15, 1fr);
  grid-template-rows: repeat(14, 1fr);
  position: relative;
}
.box {
  border: 2px solid black;
  border-radius: 1rem;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}
.box video {
  width: 150%;
  object-fit: cover;
  object-position: center;
}
.v0 {
  grid-column: 5/9;
  grid-row: 3/6;
}
.v1 {
  grid-column: 9/11;
  grid-row: 4/6;
}
.v2 {
  grid-column: 4/7;
  grid-row: 6/9;
}
.v3 {
  grid-column: 7/10;
  grid-row: 6/9;
}
.v4 {
  grid-column: 10/12;
  grid-row: 6/8;
}
.v5 {
  grid-column: 5/7;
  grid-row: 9/11;
}
.v6 {
  grid-column: 7/10;
  grid-row: 9/13;
}
.v7 {
  grid-column: 10/13;
  grid-row: 8/11;
}

/* @media screen and (max-width: 650px) {
  .box video {
    height: 150%;
  }
  .v0 video,
  .v6 video {
    width: unset;
    height: unset;
    object-position: bottom;
    /* width: calc(100% + 50px);
    height: calc(100% + 50px); 
  }
} */

